--- a/views/new.hbs
+++ b/views/new.hbs
@@ -5,5 +5,5 @@
   <input type="text" placeholder="name" name="name">
   {{!-- 當輸入框為空時，placeholder文本會顯示在輸入框中，一旦使用者開始輸入，該文本就會消失 --}}
   {{!-- 設定 name="name"，後面我們可以用 req.body.name 拿出這個輸入框的 value --}}
-  <button type="" submit>Create</button>
+  <button type="submit">Create</button>
 </form>
