feat: add method-override

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,9 @@
     <input type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}} disable>
     {{{this.name}}}
     <a href="./todos/{{ this._id}}">detail</a> {{!-- 找到資料庫中的_id --}}
-    <a href="./todos/{{ this._id}}/edit">edit</a>
-    <form action="./todos/{{this._id}}/delete" method="POST" style="display: inline;">
+    <a href="./todos/{{ this._id}}?_method=PUT">edit</a>
+
+    <form action="./todos/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
       <button type="submit">delete</button>
     </form>
   </li>
