refactor: modify index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,25 @@
 {{!-- todos --}}
-<a href="./todos/new">Create</a>
-<ul>
+<ul class="list-group">
   {{#each todos}}
-  <li>
-    {{!-- disable: 只能檢視，不能修改 --}}
-    <input type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}} disable>
-    {{{this.name}}}
-    <a href="./todos/{{ this._id}}">detail</a> {{!-- 找到資料庫中的_id --}}
-    <a href="./todos/{{ this._id}}?_method=PUT">edit</a>
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-auto me-auto">
+        {{!-- disable: 只能檢視，不能修改 --}}
+        <input style="vertical-align: middle;" type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}}
+          disable>
+        <h4 style="display: inline; vertical-align: middle;">
+          {{{this.name}}}
+        </h4>
+      </div>
+      <div class="col-auto">
+        <a class="btn btn-secondary" href="./todos/{{ this._id}}">detail</a> {{!-- 找到資料庫中的_id --}}
+        <a class="btn btn-success" href="./todos/{{ this._id}}/edit">edit</a>
 
-    <form action="./todos/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
-      <button type="submit">delete</button>
-    </form>
+        <form action="./todos/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
+          <button class="btn btn-danger" type="submit">delete</button>
+        </form>
+      </div>
+    </div>
   </li>
   {{/each}}
 </ul>
