--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,7 +1,9 @@
-<form action="/todos/{{todo._id}}?_method=PUT" method="POST">
-  {{!-- 要寫一個用PUT來接他 --}}
-  <input type="checkbox" name="isDone" {{#if todo.isDone}} checked {{/if}}>
-  <input type="text" placeholder="name" mame="name" value="{{todo.name}}">
-  <button type="submit">Save</button>
-  <a href="/">back</a>
+<form action="/todos/{{todo._id}}?_method=PUT" method="POST" style="display: inline;"> {{!-- 要寫一個用PUT來接他 --}}
+  <div class="input-group">
+    <div class="input-group-text">
+      <input type="checkbox" class="form-check-input mt-0" name="isDone" {{#if todo.isDone}} checked {{/if}}>
+    </div>
+    <input class="form-control" type="text" placeholder="name" mame="name" value="{{todo.name}}">
+    <button class="btn btn-success" type="submit">Save</button>
+  </div>
 </form>
