--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,6 +2,8 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">Login</h1>
+      {{!-- 決定哪裡要安插 message --}}
+      {{>message}}
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
